# Stroika

./: .clang-format  .config-default.json  .cproject  .dockerignore  .gitattributes  .gitignore  .project  .travis.yml  ApplyConfiguration.pl  Build-System-TODO.md  GenerateConfiguration.pl  License.txt  Makefile  NOTES_ON_BUG_TO_REPRO_FOR_MSFT_1651009.txt  README  README.md  Release-Notes.md  RunAstyle.pl  STROIKA_VERSION  StroikaDevRoot.includes  buildall.pl  checkall.pl  configure  configure.pl  v3-RoadMap.md
.circleci/: config.yml
.externalToolBuilders/: buildall.launch
.github/workflows/: build-Dev-Docker-Containers-Matrix.json  build-Dev-Docker-Containers.yml  build-N-test-Linux-v2.1-Dev.yml  build-N-test-Linux-v2.1-Release.yml  build-N-test-MacOS-v2.1-Dev.yml  build-N-test-MacOS-v2.1-Release.yml  build-N-test-Matrix.json  build-N-test-Windows-v2.1-Dev.yml  build-N-test-Windows-v2.1-Release.yml  build-N-test-v2.1-Dev.yml  build-N-test-v2.1-Release.yml  build-N-test-v3-Dev.yml  build-N-test-v3-Matrix.json  build-N-test-v3-Release.yml  build-N-test-v3.yml  build-N-test.yml  build-test-workflow-DEV.yml  build-test-workflow-RELEASE.yml  build-test-workflow-WINDOWS.yml  build-v3-Docker-Containers.yml  c-cpp.yml  codeql-analysis.yml  ubuntu-1804-run-tests.yml  unix-native-run-tests.yml  win-test.yml
Archive/ADTS_TREAP_SKIPLIST_SPLAY_TREE_FROM-STERL-2013-06-06/: EMAIL-FROM-STERL-2013-06-06.txt
Archive/Led/DevRoot/AuxiliaryPackages/fribidi/fribidi-src/: ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  fribidi.c  fribidi.pc.in  fribidi.spec  fribidi.spec.in  fribidi_benchmark.c  fribidi_char_sets.c  fribidi_char_sets_cp1256.c  fribidi_char_sets_utf8.c  fribidi_config.h.in  fribidi_create_char_types.c  fribidi_create_mirroring.c  fribidi_main.c  fribidi_mirroring.c  fribidi_tab_char_type_2.i  fribidi_tab_char_type_9.i  fribidi_tab_mirroring.i  fribidi_utils.c  fribidi_wcwidth.c  fribidi_wcwidth.i  getopt.c  getopt.h  getopt1.c  mkinstalldirs  packtab.c  packtab.h
Archive/Led/DevRoot/AuxiliaryPackages/fribidi/fribidi-src/tests/: test_CapRTL_implicit.input  test_CapRTL_implicit.reference
Archive/Stroika_FINAL_for_STERL_1992/: BetaTesters  ChangeLog  Config.bc  Config.cfront.aux  Config.cfront.snake  Config.gcc.aux  Config.mac  Config.snake  Config.snake.gcc  Config.sparc.gplus  Config.unix.sunCFront  Makefile.mac  Makefile.unix  ProjectStartup  ReadMe.MPW  ReadMe.Unix  ReleaseLog  StroikaBugs  TODO
Archive/skiplists-from-sterl-2013-05-22/: .gitignore  NOTES-FROM-STERL.txt  SkipList.sln
BootstrapToolsSrc/: realpath.cpp
BootstrapToolsSrc/vswhere/: Makefile
BuildContainers/: CreateImages  PushImages  RunImage  RunRegressionTests
BuildContainers/Centos-7-Small/: Dockerfile
BuildContainers/Stroika-Dev/: Dockerfile
BuildContainers/Ubuntu1804/: Dockerfile
BuildContainers/Ubuntu1804-Full/: Dockerfile
BuildContainers/Ubuntu1804-RegressionTests/: Dockerfile
BuildContainers/Ubuntu1804-Small/: Dockerfile
BuildContainers/Ubuntu1810-RegressionTests/: Dockerfile
BuildToolsSrc/: realpath.cpp
ConfigurationFiles/: Debug-U-32.xml  Debug-U-64.xml  Release-U-64.xml
DockerBuildContainers/: .gitattributes  CreateImages  Makefile  PushImages  ReadMe.md  RunImage
DockerBuildContainers/Centos-7-Small/: Dockerfile
DockerBuildContainers/Centos-8-Small/: Dockerfile
DockerBuildContainers/Shared-Files/: Getting-Started-With-Stroika.md
DockerBuildContainers/Stroika-Dev/: Dockerfile
DockerBuildContainers/Ubuntu1804-RegressionTests/: Dockerfile
Documentation/: .gitignore  Building Stroika.docx  Building Stroika.md  Code-Status.md  Coding Conventions.docx  Coding Conventions.md  CommonDefaultConfigurations.txt  Debugging.md  Design Overview.docx  Design Overview.md  Git-Tags-and-Branches.md  Installing-Required-Tools.md  InstallingDevEnvironment.md  Makefile  ReadMe.md  Regression-Tests.md  Release-Process.md  SetupRaspberryPiTarget.md  Stroika-Approach-To-Performance.md  Thread-Safety.md  Upgrading.md
Samples/: Makefile  ReadMe.md  ToDo.md  buildall.pl  checkall.pl
ScriptsLib/: .gitattributes  ApplyConfiguration  ApplyConfiguration.pl  BuildClang  BuildClang.sh  BuildGCC  BuildGCC.sh  BuildUtils.pl  CheckFileExists  CheckFileExists.sh  CheckForLibrary  CheckValidConfiguration  CheckValidConfiguration.sh  CheckWindowsVersion.bat  ConfigurationReader.pl  Configure-VisualStudio-Support.pl  DetectedHostOS  DoGitRelease  DoGitRelease.sh  ExtractVersionInformation  ExtractVersionInformation.sh  FetchLinuxTestResults.sh  FormatCode  FormatCode.sh  GenerateConfiguration.pl  GetClangVersion  GetCompilerArch  GetConfigurationParameter  GetConfigurationTags  GetConfigurations  GetConfigurations.sh  GetDefaultConfiguration.pl  GetDefaultShellVariable  GetDefaultShellVariable.sh  GetGCCVersion  GetMessageForMissingTool  GetMessageForMissingTool.sh  GetVisualStudioConfigLine  GetVisualStudioConfigLine.pl  HasCompiler.sh  (+44 more)
Tests/: BlockAllocation-Valgrind.supp  Common-Helgrind.supp  Common-Valgrind.supp  DefaultValgrindSuppressions.supp  Makefile  Makefile-Test-Template.mk  OpenSSL.supp  Run.pl  RunValGrind.sh  RunValGrinds.sh  SetupBuildCommonVars.pl  TODO.txt  Tests-Description.txt  ThreadSanitizerSuppressions-Ubuntu1810-x86_64.supp  ThreadSanitizerSuppressions.supp  ThreadSanitizerSuppressions_qCompiler_SanitizerDoubleLockWithConditionVariables_Buggy.supp  Valgrind-Helgrind-Common-armhf.supp  Valgrind-Helgrind-Common.supp  Valgrind-Helgrind-qCompiler_HelgrindDoubleLockWithConditionVariables_Buggy.supp  Valgrind-Helgrind-qCompiler_SanitizerDoubleLockWithConditionVariables_Buggy.supp  Valgrind-Helgrind-qCompiler_lto_Buggy.supp  Valgrind-MemCheck-BlockAllocation.supp  Valgrind-MemCheck-Common-armhf.supp  Valgrind-MemCheck-Common-x86_64.supp  Valgrind-MemCheck-Common.supp  buildall.pl  checkall.pl
Tests/1/: Run.pl  (+6 more)
ThirdPartyComponents/: .gitignore  Makefile
ThirdPartyLibs/: .gitignore  Makefile  TODO.md  buildall.OBSOLETE.pl  buildall.pl  checkall.pl
Tools/: .gitignore  Makefile  buildall.pl  checkall.pl
(+5073 files in other folders)
